Updates to resume

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "david-gifford-jr-resume",
+  "name": "davidgiffordjr-resume",
   "version": "0.0.0",
   "description": "My Resume, in JSON",
   "author": "David A Gifford Jr",
